docs(swagger): updating swagger with information about earnings and historic endpoints
