# src/controllers/investmentPortfolioController.ts
@@ -21,14 +21,14 @@ const getEarningByStock = async (req: Request, res: Response): Promise<Response>
   const { stock } = req.params;
   const earnings = await investmentsPortfolioService
     .getEarningByStock(id, stock.toUpperCase());
-  return res.status(HttpStatusCode.OK).json(earnings);
+  return res.status(HttpStatusCode.OK).json({ earnings });
 };
 
 const getTotalEarnings = async (req: Request, res: Response): Promise<Response> => {
   const { id } = res.locals.user;
   const earnings = await investmentsPortfolioService
     .getTotalEarnings(id);
-  return res.status(HttpStatusCode.OK).json(earnings);
+  return res.status(HttpStatusCode.OK).json({ earnings });
 };
 
 export default {
